# src/static/swagger.json
@@ -1,7 +1,7 @@
 openapi: 3.0.1
 info:
   title: Application
-  description: Generated at 28/05/2023 19:37:09. This is the swagger 
+  description: Generated at 30/05/2023 05:40:23. This is the swagger 
     ui based on the open api 3.0 specification of the Application
   version: 1.0.0 created by the flask swagger generator.
 externalDocs:
@@ -109,6 +109,16 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/message_agent_response'
+  '/send_sms':
+    post:
+      tags:
+      - send_notification
+      operationId: 'send_sms'
+      requestBody:
+        $ref: '#/components/requestBodies/send_sms_request_body' 
+      responses:
+        '200':
+          $ref: '#/components/responses/send_sms_response'
 components:
   requestBodies:
     send_notification_request_body:
@@ -146,6 +156,13 @@ components:
          application/json:
              schema:
                  $ref: '#/components/schemas/message_agent'
+    send_sms_request_body:
+      description: None
+      required: True
+      content:
+         application/json:
+             schema:
+                 $ref: '#/components/schemas/send_sms'
   responses:
     send_notification_response:
       description: send_notification response
@@ -195,6 +212,12 @@ components:
          application/json:
              schema:
                  $ref: '#/components/schemas/message_agent_response_schema'
+    send_sms_response:
+      description: send_sms response
+      content:
+         application/json:
+             schema:
+                 $ref: '#/components/schemas/send_sms_response_schema'
   schemas:
     send_notification:
       type: object
@@ -376,3 +399,35 @@ components:
         model:
           type: string  
           example: gpt-3.5-turbo  
+    send_sms_response_schema:
+      type: object
+      properties:
+        message:
+          type: string  
+          example: message  
+        result:
+          type: string  
+          example: test_result  
+    send_sms:
+      type: object
+      properties:
+        token:
+          type: string  
+          example: test_token  
+        uuid:
+          type: string  
+          example: test_uuid  
+        data:
+          $ref: "#/components/schemas/data_send_sms"  
+    data_send_sms:
+      type: object
+      properties:
+        from:
+          type: string  
+          example: +15005550006  
+        to:
+          type: string  
+          example: +12173748105  
+        body:
+          type: string  
+          example: All in the game, yo  
